Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -260,12 +260,138 @@ x /= 5
 ---
 &nbsp;
 ### 2.5 Operacje na stringach
-Podobnie jak na liczbach, tak i na stringach możemy wykonywać określone operacje
+Podobnie jak na liczbach, tak i na stringach możemy wykonywać określone operacje. Poniżej znajduje się kilka najczęściej używanych funkcji. Zwróć uwagę, że ich wywołanie wygląda inaczej niż dla funkcji takich jak np. `print`, `len` czy `round`. Są to tzw. **metody** czyli funkcje wywoływane bezpośrednio na obiektach (czyli instancjach klasy). Więcej o obiektach, klasach, metodach oraz pozostałych zagadnieniach programowania zorientowanego obiektowo znajdziesz w [[10. Programowanie obiektowe|osobnej lekcji]]. Na ten moment potraktuj poniższy sposób wywoływania funkcji jako alternatywę dla tego poznanego dotychczas a "metoda" niech będzie innym słowem oznaczającym funkcję.
+
+Poniższy tekst będziemy przekształcać na różne sposoby metodami klasy `str` (czyli string):
+```python
+experience_rule = "każdy zabity Zombie daje ci jeden punkt doświadczenia"
+```
+---
+```python
+# zamiana wszystkich liter na małe
+experience_rule.lower()
+```
+'każdy zabity zombie daje ci jeden punkt doświadczenia'
+
+```python
+# zamiana wszystkich liter na wielkie
+experience_rule.upper()
+```
+'KAŻDY ZABITY ZOMBIE DAJE CI JEDEN PUNKT DOŚWIADCZENIA'
+
+```python
+# pierwsza litera staje się  wielka, pozostałe stają się małe
+experience_rule.capitalize()
+```
+'Każdy zabity zombie daje ci jeden punkt doświadczenia'
+
+```python
+# pierwsza litera każdego słowa staje się wielka, pozostałe stają się małe
+experience_rule.title()
+```
+'Każdy Zabity Zombie Daje Ci Jeden Punkt Doświadczenia'
+
+```python
+# sprawdzamy czy nasz string zaczyna się od konkretnego ciągu znaków
+experience_rule.startswith('każdy za')
+```
+True
+
+```python
+# sprawdzamy czy nasz string kończy się konkretnym ciągiem znaków
+experience_rule.endswith('adczenia!!!')
+```
+False
+
+```python
+# zamieniamy wszystkie wystąpienia tekstu 'Zombie' na 'człowiek'
+experience_rule.replace("Zombie", "człowiek")
+```
+'każdy zabity człowiek daje ci jeden punkt doświadczenia'
+
+Po wywołaniu wszystkich tych funkcji wartość zmiennej `experience_rule` nie uległa modyfikacji. Powyższe funkcje zwracają zmodyfikowanego stringa (lub True/False), ale nie nadpisują tych zmian na oryginalnym obiekcie.
+
+---
+Ze stringów możemy wyciągać poszczególne znaki lub ich sekwencje na podstawie ich pozycji, zwanych także **indeksami**.
+
+---
+>Pozycje te (indeksy) numerujemy od 0, to znaczy że pierwszy znak stringa ma indeks 0. Stąd możemy go również nazywać "zerowym" znakiem, kolejny "pierwszym" itd. Błędna indeksacja stringów oraz innych sekwencji jest częstym błędem początkujących.
+---
+
+Indeksy które chcemy wyciągnąć przekazujemy w **nawiasach kwadratowych**.  Dla przypomnienia - string na którym pracujemy to:
+```python
+experience_rule = "każdy zabity Zombie daje ci jeden punkt doświadczenia"
+```
+
+```python
+experience_rule[0]
+```
+'k'
+
+```python
+experience_rule[6]
+```
+'z'
+
+```python
+experience_rule[11]
+```
+'y'
+
+```python
+experience_rule[12]
+```
+' '
+Aby wyciągnąć sekwencję znaków od jednego indeksu do drugiego używamy dwukropka, który wskazuje na przedział. Uwaga - pozycja podana **po** dwukropku stanowi przedział otwarty, to znaczy że nie pojawia się w wyniku!
+
+```python
+experience_rule[6:12]
+```
+'zabity'
+
+```python
+# od indeksu 6 włącznie do końca
+experience_rule[6:]
+```
+'zabity Zombie daje ci jeden punkt doświadczenia'
+
+```python
+# od początku do indeksu 6, ale bez niego samego
+experience_rule[:6]
+```
+'każdy '
+
+Ponadto stringi możemy dodawać łacząc je w dłuższe łańcuchy:
+```python
+"Każdy" + " " + "zabity" + " " + "zombie" + " daje ci jeden punkt doświadczenia"
+```
+'Każdy zabity zombie daje ci jeden punkt doświadczenia'
+
+---
+Jeśli wewnątrz stringa chcemy umieścić wartość jakiejś zmiennej, możemy zrobić to używając tzw. f-stringa (*formatted string*). Jego składnia jest następująca:
+```python
+my_velocity = 4
+
+print(f"W każdej jednostce czasu pokonuję {my_velocity} jednostki odległości")
+```
+`f` przed otwarciem cudzysłowa (pojedynczego lub podwójnego) oznacza że tworzymy f-stringa, natomiast w nawiasach klamrowych wewnątrz umieszczamy zmienną, która ma znaleźć się wewnątrz stringa. Powyższy kod wyprintuje następujący tekst:
+`'W każdej jednostce czasu pokonuję 4 jednostki odległości'`
+
+Istnieje również inny sposób formatowania stringów, charakterystyczny dla starszych wersji Pythona:
+
+```python
+my_experience = 6
+
+"Moje doświadczenie wynosi {}".format(my_experience)
+```
 
 
 ---
 **Operacje na stringach - podsumowanie:**
-- ...
+- Na obiektach typu string możemy wykonać cały szereg różnych funkcji (metod), które zwracają zmodyfikowaną zawartość tego stringa, głównie w kwestii wielkości liter. Nie nadpisują one jednak oryginalnego obiektu
+- Ze stringa możemy wyciągać tzw. slice'y czyli wycinki wyznaczone na podstawie indeksów poszczególnych znaków. Indeksy te przekazujemy w nawiasach kwadratowych a dla oznaczenia przedziału używamy dwukropka
+- Stringi możemy dodawać używając operatora +
+- Aby wewnątrz stringa umieścić wartość jakiejś zmiennej używamy tzw. f-stringa
 ---
 ---
 ---
