Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -397,8 +397,40 @@ my_experience = 6
 ---
 &nbsp;
 ### 2.6 Komentarze
-...
+Czasami chcemy w kodzie zawrzeć jakąś notatkę, która nie jest poprawnym składniowo kodem Pythona - jest po prostu informacją dla osoby, która będzie w przyszłości czytać nasz kod. Takie notatki nazywają się komentarzami a ich zawartość nie jest czytana przez interpreter Pythona.
 
+Aby napisać komentarz należy użyć znaku # - to co znajdzie się na prawo od niego będzie traktowane jako komentarz.
+
+```python
+initial_x_coordinate = -4.12  # początkowe położenia wzdłuż osi x
+initial_y_coordinate = 20.55  # początkowe położenie wzdłuż osi y
+initial_experience = 0  # początkowe doświadczenie
+# TODO zainicjować kolejne parametry początkowe
+```
+
+Czasami dodanie komentarza jest dobrym sposobem na to aby dany fragment kodu był bardziej zrozumiały dla osoby, która do niego wraca, ale ogólna zasada pisania dobrego kodu jest taka, że kod powinien być "samokomentujący się", to znaczy że on sam tłumaczy co właśnie dzieje się w programie.
+
+Innym zastosowaniem komentarzy, którego również nie powinno się nadużywać jest komentowanie fragmentów kodu, którego tymczasowo nie planujemy używać ale nie chcemy go też trwale usuwać. Jest to przydatne na etapie testowania i eksperymentowania, ale na dłuższą metę zakomentowany kod nie powinien znajdować się w repozytorium (czyli "miejscu" gdzie składowany jest kod). 
+
+---
+
+W wielu językach programowania istnieją tzw. komentarze blokowe, czyli takie które obejmują więcej niż jedną linię kodu. W Pythonie nie istnieją takie komentarze, ale ich rolę mogą spełniać wielolinijkowe stringi. Aby utworzyć wielolinijkowego stringa - używamy potrójnych cudzysłowów (lub apostrofów):
+
+```python
+"""
+Ten string
+ma wiele
+linii
+"""
+```
+
+Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z tą różnicą że interpreter traktuje go jak pełnoprawnego stringa. Po prostu nie jest on przypisywany do żadnej zmiennej więc nie wpływa na działanie programu.
+
+---
+**Komentarze - podsumowanie:**
+- Fragment kodu (tekstu), który znajduje się na prawo od znaku # jest komentarzem i nie jest przetwarzany przez interpreter
+- W komentarzach mogą znajdować się na przykład notatki lub tymczasowo nieużywany kod. Nie powinniśmy jednak ich nadużywać. Dobry kod nie wymaga komentarzy aby wiedzieć co się w nim dzieje
+- W Pythonie nie istnieją komentarze blokowe, ale ich rolę spełniają wielolinijkowe stringi, które zapisujemy wewnątrz ''' ... ''' lub """ ... """
 ---
 ---
 ---
