Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -410,7 +410,7 @@ initial_experience = 0  # początkowe doświadczenie
 
 Czasami dodanie komentarza jest dobrym sposobem na to aby dany fragment kodu był bardziej zrozumiały dla osoby, która do niego wraca, ale ogólna zasada pisania dobrego kodu jest taka, że kod powinien być "samokomentujący się", to znaczy że on sam tłumaczy co właśnie dzieje się w programie.
 
-Innym zastosowaniem komentarzy, którego również nie powinno się nadużywać jest komentowanie fragmentów kodu, którego tymczasowo nie planujemy używać ale nie chcemy go też trwale usuwać. Jest to przydatne na etapie testowania i eksperymentowania, ale na dłuższą metę zakomentowany kod nie powinien znajdować się w repozytorium (czyli "miejscu" gdzie składowany jest kod). 
+Innym zastosowaniem komentarzy, którego również nie powinniśmy nadużywać jest komentowanie fragmentów kodu, którego tymczasowo nie planujemy używać ale nie chcemy go też trwale usuwać. Jest to przydatne na etapie testowania i eksperymentowania, ale na dłuższą metę zakomentowany kod nie powinien znajdować się w repozytorium (czyli "miejscu" gdzie składowany jest kod). 
 
 ---
 
@@ -436,8 +436,7 @@ Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z 
 ---
 &nbsp;
 ### 2.7 Funkcja input()
-...
-
+Test [[3. Struktury danych#3.8 Wbudowane generatory cz. 1|generatory]]
 ---
 ---
 ---
