Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -435,9 +435,24 @@ Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z 
 ---
 ---
 &nbsp;
-### 2.7 Funkcja input()
-...
+### 2.7 Funkcja input
+Zdarza się że w naszym programie chcemy w pewnym momencie pobrać od użytkownika jakąś informację. W tym celu można użyć wbudowanej funkcji `input`, która w odpowiednim momencie zatrzymuje program, pobiera od użytkownika informację (często wyświetlając przy tym jakiś tekst) i przechwytuje ją - zazwyczając zapisując do zmiennej. 
 
+Poniżej znajduje się przykład użycia funkcji `input`:
+```python
+init_number_of_humans = input("Podaj początkową liczbę ludzi w symulacji: ")
+init_number_of_zombies = input("Podaj początkową liczbę zombie w symulacji: ")
+
+print(init_number_of_humans)
+print(init_number_of_zombies)
+```
+
+Program zapyta nas najpierw o początkową liczbę ludzi jaka ma wziąć udział w symulacji, następnie o liczbę zombie a na koniec wyprintuje te wartości. Uwaga - nawet kiedy podajemy do funkcji `input` liczby, są one traktowane jako string, np. '4' a nie 4.
+
+---
+**Funkcja input - podsumowanie:**
+- Aby przechwycić od użytkownika programu wartość z możliwością zapisu jej do zmiennej używamy funkcji `input`
+- Funkcja ta zawsze zwraca stringa
 ---
 ---
 ---
