Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -1,61 +1,118 @@
 ### 3.1 list
-...
+Struktury danych - zwane również kolekcjami - to obiekty, które są w stanie przechowywać więcej niż jedną wartość w zorganizowany sposób. Jedną z najbardziej powszechnych struktur danych w Pythonie jest lista, czyli odpowiednik arraya z takich języków jak JavaScript czy C++. 
 
+Lista to szereg kolejnych wartości, które zwykle są ze sobą w jakiś sposób powiązane w związku z czym wygodniej jest trzymać je w jednej zmiennej. Na przykład poniższy zapis:
+```python
+human_1_x = 14.34
+human_2_x = -3.89
+human_3_x = -65.23
+human_4_x = 0.84
+
+human_1_y = 3.52
+human_2_y = -42.91
+human_3_y = 2.75
+human_4_y = 22.48
+```
+
+pozwala przechować w pamięci komputera położenie (x, y) 4 postaci. W tym celu trzeba zapisać aż 8 linii kodu. A co jeśli tych zamiast 4 będzie 100 albo 1000?
+
+Dużo wygodniej jest posłużyć się strukturą, która w ramach jednej zmiennej pozwala przechować dowolną liczbę obiektów:
+
+```python
+human_x_coordinates = [14.34, -3.89, -65.23, 0.84]
+human_y_coordinates = [3.52, -42.91, 2.75, 22.48]
+```
+
+Teraz mamy tylko dwie zmienne - jedna przechowuje współrzędne x a druga y. Kiedy pojawi się nowa postać, której współrzędne będziemy chcieli zapisać wystarczy rozbudować już istniejące listy.
+
+---
+Jeśli chcemy się przekonać jakiego typu jest utworzony przed chwilą obiekt (lista) wystarczy użyć funkcji `type`:
+```python
+type(human_x_coordinates)
+```
+Okaże się, że jest to `list`. 
+
+Aby dostać się do poszczególnych elementów listy używamy takiej samej notacji jak do [[2. Podstawy#2.5 Operacje na stringach|wyciągania ze stringów]] poszczególnych znaków lub ich przedziałów. Należy pamiętać, że indeks 0 odnosi się do tego elementu, który potocznie nazywamy "pierwszym":
+```python
+human_x_coordinates[0]
+```
+14.34
+
+```python
+human_x_coordinates[1]
+```
+-3.89
+
+Jeżeli chcemy odwołać się do jakiegoś elementu listy idąc od jej końca, używamy poniższej notacji. -1 oznacza element pierwszy od końca, -2 to element drugi od końca itd. Tutaj nie mamy już do czynienia z numeracją od 0:
+```python
+human_x_coordinates[-1]
+```
+0.84
+
+---
+Listy mogą składać się z elementów różnych typów, np:
+```python
+mixed_list = ["a", 1, 2.34, True, None]
+```
+
+Aby utworzyć pustą listę możemy zrobić to na jeden z dwóch poniższych sposobów:
+```python
+empty_list = []
+empty_list = list()
+```
+
+--- 
+**`list` - podsumowanie:**
+- Lista to szereg wartości zorganizowanych w ramach jednej struktury danych, jednej zmiennej
+- Do elementów listy możemy się dostać poprzez podanie ich indeksów. Indeksacja zaczyna się od 0 (idąc od początku do końca listy) lub od -1 (idąc od końca do początku)
+- Listy mogą składać się z obiektów różnych typów
 ---
 ---
 ---
 &nbsp;
 ### 3.2 tuple
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 3.3 dict
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 3.4 set
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 3.5 Operacje na strukturach danych
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 3.6 Slicing
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 3.7 Zagnieżdżone struktury
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 3.8 Wbudowane generatory cz. 1
-...
 
 ---
 ---
 ---
 &nbsp;
 ### 3.9 Mutowalność, hashowalność i kopiowanie obiektów
-...
 
 ---
 ---
