Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -50,12 +50,26 @@ human_x_coordinates[-1]
 0.84
 
 ---
-Listy mogą składać się z elementów różnych typów, np:
+**Poniżej znajduje się kilka dodatkowych informacji dotyczących list:**
+1. Aby zmodyfikować któryś z elementów listy należy odwołać się do niego po indeksie a następnie przypisać do niego pożądaną wartość:
+```python
+human_x_coordinates[1] = 100
+human_x_coordinates[1:3] = [20, 30]
+```
+
+
+2. Listy mogą składać się z elementów różnych typów, np:
 ```python
 mixed_list = ["a", 1, 2.34, True, None]
 ```
 
-Aby utworzyć pustą listę możemy zrobić to na jeden z dwóch poniższych sposobów:
+3. Jeśli chcemy rozbić stringa na listę pojedynczych znaków możemy zrobić to w następujący sposób:
+```python
+list("abcdef")
+```
+['a', 'b', 'c', 'd', 'e', 'f']
+
+4. Aby utworzyć pustą listę możemy zrobić to na jeden z dwóch poniższych sposobów:
 ```python
 empty_list = []
 empty_list = list()
@@ -65,13 +79,61 @@ empty_list = list()
 **`list` - podsumowanie:**
 - Lista to szereg wartości zorganizowanych w ramach jednej struktury danych, jednej zmiennej
 - Do elementów listy możemy się dostać poprzez podanie ich indeksów. Indeksacja zaczyna się od 0 (idąc od początku do końca listy) lub od -1 (idąc od końca do początku)
+- Aby zmodyfikować wartość elementu listy (lub przedziału elementów) należy odwołać się do niego po indeksie a następnie przypisać pożądaną wartość
 - Listy mogą składać się z obiektów różnych typów
+- Za pomocą funkcji `list` możemy zamienić stringa na listę znaków
 ---
 ---
 ---
 &nbsp;
 ### 3.2 tuple
+Podobną strukturą danych do listy jest tupla (ang. *tuple*). Ona również pozwala na przechowanie szeregu wartości w ramach jednej struktury. Tworząc tuplę używamy nawiasów okrągłych:
+```python
+x_y_coordinates = (14.34, 3.52)
+```
 
+Istnieją również inne różnice między tymi dwiema strukturami. Podstawowa różnica jest taka, że tupla jest typem niemutowalnym, co oznacza że raz utworzonej tupli nie możemy zmodyfikować. Ma to swoje konsekwencje związane z ilością pamięci zajmowanej przez obiekt oraz czasem w jakim jest on tworzony. Więcej na ten temat znajduje się w [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|osobnym temacie]]. 
+
+Pomimo tego, że tuple zwykle zapisujemy w nawiasach okrągłych, to są one opcjonalne. **Kluczowy dla tupli jest przecinek** a nie nawiasy. Oba poniższe zapisy są równoważne:
+```python
+x = (1, 2, 3)
+x = 1, 2, 3
+```
+
+Należy o tym pamiętać zwłaszcza przy tworzeniu jednoelementowej tupli kiedy użycie przecinka może wydać się niepotrzebne. Poniżej znajdują się 4 zapisy, spośród których tylko dwa ostatnie poprawnie tworzą jednoelementową tuplę: 
+
+```python
+one_item_tuple = "hello"  # string
+one_item_tuple = ("hello")  # też string
+one_item_tuple = "hello",  # tupla z jednym stringiem
+one_item_tuple = ("hello",)  # też tupla z jednym stringiem
+```
+
+---
+Wyciąganie z tupli podzbiorów za pomocą indeksów działa analogicznie jak dla list. Jedyna różnica jest taka, że nie możemy w ten sposób nadpisywać wartości w tupli ze względu na jej niemutowalność
+
+Tuple także mogą przechowywać elementy różnych typów
+```python
+mixed_tuple = ("a", 1, 2.34, True, None)
+```
+
+Podobnie jak w przypadku listy, stringa możemy zamienić również na tuplę:
+```python
+tuple("abcdef")
+```
+('a', 'b', 'c', 'd', 'e', 'f')
+
+Pustą tuplę możemy utworzyć na dwa sposoby:
+```python
+empty_tuple = ()
+empty_tuple = tuple()
+```
+
+---
+**`tuple` - podsumowanie:**
+- Tuple działają podobnie jak listy, ale są niemutowalne to znaczy że nie możemy modyfikować ich zawartości
+- Tworząc tuplę możemy użyć do jej zapisu nawiasów okrągłych, ale to przecinek jest niezbędny do tego aby powstała tupla
+- Tuple mogą składać się z obiektów różnych typów
 ---
 ---
 ---
