Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -131,7 +131,7 @@ empty_tuple = tuple()
 
 ---
 **`tuple` - podsumowanie:**
-- Tuple działają podobnie jak listy, ale są niemutowalne to znaczy że nie możemy modyfikować ich zawartości
+- Tuple działają podobnie jak listy, ale są niemutowalne - to znaczy że nie możemy modyfikować ich zawartości
 - Tworząc tuplę możemy użyć do jej zapisu nawiasów okrągłych, ale to przecinek jest niezbędny do tego aby powstała tupla
 - Tuple mogą składać się z obiektów różnych typów
 ---
@@ -139,7 +139,59 @@ empty_tuple = tuple()
 ---
 &nbsp;
 ### 3.3 dict
+Kolejną strukturą danych, którą często wykorzystujemy w Pythonie do organizacji danych jest słownik, zwany również dictem (ang. *dictionary*). Słowników używamy tam gdzie istnieją pary klucz-wartość takie że pod każdym (unikalnym w ramach dicta) kluczem znajduje się jakaś wartość. 
 
+Przykładem może być struktura, w której znajdują się infromacje na temat symulowanych postaci:
+```python
+zombie_character = {"class": "Zombie",
+					"x": 1.20, "y": -4.32, "velocity": 2.4,
+					"experience": 3,
+                    "power": 10, "is alive": True, "killed at": None}
+```
+
+Składnia dicta jest następująca - otwieramy oraz zamykamy go nawiasami klamrowymi wewnątrz których znajdują się oddzielone przecinkiem pary klucz-wartość, takie że najpierw podajemy klucz a po dwukropku wartość jaka się pod nim kryje.
+
+Aby wyciągnąć wartość która przechowywana jest pod danym kluczem używamy - podobnie jak przy listach oraz tuplach - nawiasów kwadratowych. Jednak zamiast podawania indeksu (pozycji) elementu, który nas interesuje używamy odpowiedniego klucza.
+Przykładowo aby wyciągnąć wartość pod kluczem "velocity" piszemy:
+```python
+zombie_character["velocity"]
+```
+
+Wartościami dicta mogą być dowolne obiekty. Kluczem może być jedynie obiekt, który jest hashowalny. Więcej na temat hashowalności znajdziesz [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|tutaj]]. Poniżej przykład gdzie kluczami dicta są inty a wartościami tuple:
+```python
+position_in_time = {
+    1: (4, 5),
+    2: (6, 7.5),
+    3: (8.3, 4.25),
+    4: (10, 6)
+}
+```
+
+Przedstawia on pozycje (x, y) postaci w kolejnych jednostkach czasu.  Aby dostać się do tupli `(6, 7.5)` musimy użyć klucza `2`:
+```python
+position_in_time[2]
+```
+
+---
+Aby wydobyć ze słownika jego klucze używamy metody `.keys()`:
+```python
+zombie_character.keys()
+```
+
+Powyższy kod zwróci: `dict_keys(['class', 'x', 'y', 'velocity', 'experience', 'power', 'is alive', 'killed at'])`
+
+Wynikiem jest obiekt klasy `dict_keys`. Więcej na temat obiektów i klas znajdziesz w [[10. Programowanie obiektowe|osobnej lekcji]]
+
+`dict_keys` możemy traktować na razie jako coś podobnego do listy. Gdybyśmy chcieli stworzyć obiekt typu `list` zawierający informację o kluczach słownika musimy zrzutować `dict_keys` na listę:
+```python
+list(zombie_character.keys())
+```
+
+Analogicznie do `.keys()` działa metoda `.values()`.
+```python
+zombie_character.values()
+```
+Zwraca ona "listę" wartości: `dict_values(['Zombie', 1.2, -4.32, 2.4, 3, 10, True, None])`
 ---
 ---
 ---
