Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -141,7 +141,7 @@ empty_tuple = tuple()
 ### 3.3 dict
 Kolejną strukturą danych, którą często wykorzystujemy w Pythonie do organizacji danych jest słownik, zwany również dictem (ang. *dictionary*). Słowników używamy tam gdzie istnieją pary klucz-wartość takie że pod każdym (unikalnym w ramach dicta) kluczem znajduje się jakaś wartość. 
 
-Przykładem może być struktura, w której znajdują się infromacje na temat symulowanych postaci:
+Przykładem może być struktura, w której przechowujemy informacje na temat symulowanych postaci:
 ```python
 zombie_character = {"class": "Zombie",
 					"x": 1.20, "y": -4.32, "velocity": 2.4,
@@ -191,7 +191,13 @@ Analogicznie do `.keys()` działa metoda `.values()`.
 ```python
 zombie_character.values()
 ```
-Zwraca ona "listę" wartości: `dict_values(['Zombie', 1.2, -4.32, 2.4, 3, 10, True, None])`
+Zwraca ona "listę" wartości, w tym przypadku `dict_values(['Zombie', 1.2, -4.32, 2.4, 3, 10, True, None])`
+
+---
+**dict - podsumowanie:**
+- Słownik to zestaw par klucz-wartość. Odwołując się do poszczególnych kluczy możemy dostać się do wartości, które znajdują się pod nimi
+- Dowolny obiekt może być wartością w słowniku, kluczami mogą być tylko [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|obiekty hashowalne]]
+- Aby wyciągnąć same klucze lub same wartości słownika używamy metod `.keys()` lub `.values()`
 ---
 ---
 ---
