Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -203,7 +203,32 @@ Zwraca ona "listę" wartości, w tym przypadku `dict_values(['Zombie', 1.2, -4.3
 ---
 &nbsp;
 ### 3.4 set
+Ostatnią z 4 najczęściej używanych struktur danych jest `set`. `set`, czyli po polsku "zbiór" to struktura, która przechowuje zestaw unikalnych wartości w nieuporządkowanej formie. To znaczy że poszczególnym elementom nie przypisujemy indeksów wskazujących na ich pozycję w zbiorze. Wartości znajdujące się w zbiorze nie mogą występować w nim wielokrotnie - albo tam są albo ich nie ma.
 
+Aby utworzyć `set` używamy nawiasów klamrowych a jego elementy oddzielamy przecinkiem:
+```python
+allowed_classes = {"human", "zombie"}
+```
+
+Jeśli spróbujemy powtórzyć w zbiorze jedną wartość kilkukrotnie, w zbiorze i tak znajdzie się ona tylko raz:
+```python
+allowed_classes = {"human", "human", "zombie"}
+print(allowed_classes)  # wynik: {"human", "zombie"}
+```
+
+---
+Jednym z zastosowań setów jest wyciąganie z listy jej unikalnych elementów:
+```python
+list_with_duplicates = ["human", "human", "zombie"]
+unique_items_list = list(set(list_with_duplicates))
+```
+
+`unique_items_list` będzie listą o elementach: `['zombie', 'human']`, natomiast samo `set(list_with_duplicates)` będzie setem o takich elementach.
+
+---
+**`set` - podsumowanie:**
+- `set` to struktura danych przechowująca zbiór unikalnych wartości
+- Kolejność elementów w zbiorze nie ma znaczenia. Po jej zamianie mamy do czynienia z dokładnie tym samym zbiorem
 ---
 ---
 ---
