Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -203,14 +203,14 @@ Zwraca ona "listę" wartości, w tym przypadku `dict_values(['Zombie', 1.2, -4.3
 ---
 &nbsp;
 ### 3.4 set
-Ostatnią z 4 najczęściej używanych struktur danych jest `set`. `set`, czyli po polsku "zbiór" to struktura, która przechowuje zestaw unikalnych wartości w nieuporządkowanej formie. To znaczy że poszczególnym elementom nie przypisujemy indeksów wskazujących na ich pozycję w zbiorze. Wartości znajdujące się w zbiorze nie mogą występować w nim wielokrotnie - albo tam są albo ich nie ma.
+Ostatnią z 4 najczęściej używanych struktur danych jest `set`. `set`, czyli po polsku "zbiór" to struktura, która przechowuje zestaw unikalnych wartości w nieuporządkowanej formie. To oznacza, że poszczególnym elementom nie przypisujemy indeksów wskazujących na ich pozycję w zbiorze. Wartości znajdujące się w zbiorze nie mogą występować w nim wielokrotnie - albo tam są albo ich nie ma.
 
 Aby utworzyć `set` używamy nawiasów klamrowych a jego elementy oddzielamy przecinkiem:
 ```python
 allowed_classes = {"human", "zombie"}
 ```
 
-Jeśli spróbujemy powtórzyć w zbiorze jedną wartość kilkukrotnie, w zbiorze i tak znajdzie się ona tylko raz:
+Jeśli spróbujemy powtórzyć jedną wartość kilkukrotnie, w zbiorze i tak znajdzie się ona tylko raz:
 ```python
 allowed_classes = {"human", "human", "zombie"}
 print(allowed_classes)  # wynik: {"human", "zombie"}
@@ -234,7 +234,27 @@ unique_items_list = list(set(list_with_duplicates))
 ---
 &nbsp;
 ### 3.5 Operacje na strukturach danych
+Każda struktura danych - lista, tupla, dict czy set - posiada określony zakres funkcji (metod), które możemy wykonywać na obiektach tego typu. Poniżej opisane zostały najczęściej wykorzystywane metody dla omówionych wcześniej struktur danych.
 
+#### 3.5.1 `list`
+**`len`**
+...
+
+**`append`**
+...
+
+**`split`**
+...
+
+
+#### 3.5.2 `tuple`
+**`len`**
+...
+
+
+#### 3.5.3 `dict`
+
+#### 3.5.4 `set`
 ---
 ---
 ---
