Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -237,20 +237,48 @@ unique_items_list = list(set(list_with_duplicates))
 Każda struktura danych - lista, tupla, dict czy set - posiada określony zakres funkcji (metod), które możemy wykonywać na obiektach tego typu. Poniżej opisane zostały najczęściej wykorzystywane metody dla omówionych wcześniej struktur danych.
 
 #### 3.5.1 `list`
+```python
+human_x_coordinates = [14.34, -3.89, -65.23, 0.84]
+```
 **`len`**
-...
+```python
+len(human_x_coordinates)  # sprawdza długość listy
+```
+4
 
+---
 **`append`**
-...
+```python
+human_x_coordinates.append(2.45)  # dodaje nowy element na końcu listy
+print(human_x_coordinates)
+```
+[14.34, -3.89, -65.23, 0.84, 2.45]
 
+---
 **`split`**
-...
+```python
+experience_rule = "każdy zabity zombie daje ci jeden punkt doświadczenia"
 
+print(experience_rule.split())
+```
+['każdy', 'zabity', 'zombie', 'daje', 'ci', 'jeden', 'punkt', 'doświadczenia']
+
+```python
+print(experience_rule.split("a"))
+```
+['k', 'żdy z', 'bity zombie d', 'je ci jeden punkt doświ', 'dczeni', '']
+
+---
 
 #### 3.5.2 `tuple`
 **`len`**
 ...
 
+**`index`**
+...
+
+**`count`**
+...
 
 #### 3.5.3 `dict`
 
