Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -259,16 +259,76 @@ print(human_x_coordinates)
 ```python
 experience_rule = "każdy zabity zombie daje ci jeden punkt doświadczenia"
 
-print(experience_rule.split())
+experience_rule.split()  # zamienia stringa na listę dzieląc go po spacji...
 ```
 ['każdy', 'zabity', 'zombie', 'daje', 'ci', 'jeden', 'punkt', 'doświadczenia']
 
 ```python
-print(experience_rule.split("a"))
+experience_rule.split("a")  # ... lub dowolnym innym ciągu znaków
 ```
 ['k', 'żdy z', 'bity zombie d', 'je ci jeden punkt doświ', 'dczeni', '']
 
 ---
+**`join`**
+```python
+" ".join(["Każdy", "zabity", "zombie", "daje", "ci", "jeden", "punkt", "doświadczenia"])  # łączy elementy listy wstawiając pomiędzy nie dowolny ciąg znaków
+```
+'Każdy zabity zombie daje ci jeden punkt doświadczenia'
+
+---
+**`sorted`**
+```python
+sorted(human_x_coordinates)  # sortuje elementy listy rosnąco
+```
+[-65.23, -3.89, 0.84, 2.45, 14.34]
+
+---
+**`extend`**
+```python
+human_x_coordinates.extend([1, 2, 3])  # rozszerza listę o elementy innej listy
+print(human_x_coordinates)
+```
+[14.34, -3.89, -65.23, 0.84, 1, 2, 3]
+
+---
+**`index`**
+```python
+human_x_coordinates.index(14.34)  # zwraca indeks podanego elementu
+```
+0
+
+---
+**`insert`**
+```python
+human_x_coordinates.insert(2, 100)  # wstawia nowy element na określonej pozycji
+print(human_x_coordinates)
+```
+[14.34, -3.89, 100, -65.23, 0.84, 2.45, 1, 2, 3]
+
+---
+**`pop`**
+```python
+human_x_coordinates.pop()  # usuwa ostatni element z listy i zwraca go
+```
+3
+
+```python
+human_x_coordinates.pop(1)  # albo element o podanym indeksie
+```
+-3.89
+
+```python
+print(human_x_coordinates)
+```
+[14.34, 100, -65.23, 0.84, 2.45, 1, 2]
+
+---
+**`count`**
+```python
+human_x_coordinates.count(100)  # zlicza ile razy w liście wystąpiła podana wartość
+```
+1
+
 
 #### 3.5.2 `tuple`
 **`len`**
