Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -14,7 +14,7 @@ human_3_y = 2.75
 human_4_y = 22.48
 ```
 
-pozwala przechować w pamięci komputera położenie (x, y) 4 postaci. W tym celu trzeba zapisać aż 8 linii kodu. A co jeśli tych zamiast 4 będzie 100 albo 1000?
+pozwala przechować w pamięci komputera położenie (x, y) 4 postaci. W tym celu trzeba zapisać aż 8 linii kodu. A co jeśli tych postaci zamiast 4 będzie 100 albo 1000?
 
 Dużo wygodniej jest posłużyć się strukturą, która w ramach jednej zmiennej pozwala przechować dowolną liczbę obiektów:
 
@@ -271,7 +271,8 @@ experience_rule.split("a")  # ... lub dowolnym innym ciągu znaków
 ---
 **`join`**
 ```python
-" ".join(["Każdy", "zabity", "zombie", "daje", "ci", "jeden", "punkt", "doświadczenia"])  # łączy elementy listy wstawiając pomiędzy nie dowolny ciąg znaków
+# łączy elementy listy wstawiając pomiędzy nie dowolny ciąg znaków
+" ".join(["Każdy", "zabity", "zombie", "daje", "ci", "jeden", "punkt", "doświadczenia"])
 ```
 'Każdy zabity zombie daje ci jeden punkt doświadczenia'
 
