Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -26,13 +26,13 @@ human_y_coordinates = [3.52, -42.91, 2.75, 22.48]
 Teraz mamy tylko dwie zmienne - jedna przechowuje współrzędne x a druga y. Kiedy pojawi się nowa postać, której współrzędne będziemy chcieli zapisać wystarczy rozbudować już istniejące listy.
 
 ---
-Jeśli chcemy się przekonać jakiego typu jest utworzony przed chwilą obiekt (lista) wystarczy użyć funkcji `type`:
+Jeśli chcemy się przekonać jakiego typu jest utworzony przed chwilą obiekt (czyli lista) wystarczy użyć funkcji `type`:
 ```python
 type(human_x_coordinates)
 ```
 Okaże się, że jest to `list`. 
 
-Aby dostać się do poszczególnych elementów listy używamy takiej samej notacji jak do [[2. Podstawy#2.5 Operacje na stringach|wyciągania ze stringów]] poszczególnych znaków lub ich przedziałów. Należy pamiętać, że indeks 0 odnosi się do tego elementu, który potocznie nazywamy "pierwszym":
+Aby dostać się do poszczególnych elementów listy używamy takiej samej notacji jak do [[2. Podstawy#2.5 Operacje na stringach|wyciągania części stringów]] poszczególnych znaków lub ich przedziałów. Należy pamiętać, że indeks 0 odnosi się do tego elementu, który potocznie nazywamy "pierwszym":
 ```python
 human_x_coordinates[0]
 ```
