Just another update

--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -242,7 +242,7 @@ human_x_coordinates = [14.34, -3.89, -65.23, 0.84]
 ```
 **`len`**
 ```python
-len(human_x_coordinates)  # sprawdza długość listy
+len(human_x_coordinates)  # zwraca długość listy
 ```
 4
 
@@ -332,18 +332,121 @@ human_x_coordinates.count(100)  # zlicza ile razy w liście wystąpiła podana w
 
 
 #### 3.5.2 `tuple`
+```python
+x_y_coordinates = (14.34, 3.52)
+```
 **`len`**
-...
+```python
+len(x_y_coordinates)  # zwraca długość tupli
+```
+2
 
 **`index`**
-...
+```python
+x_y_coordinates.index(14.34)  # zwraca indeks podanego elementu
+```
+0
 
 **`count`**
-...
+```python
+x_y_coordinates.count(14.34)  # zlicza ile razy w tupli wystąpiła podana wartość
+```
+1
 
 #### 3.5.3 `dict`
+```python
+human_character = {"class": "Human"}
+```
+
+**`update`**
+```python
+# dodaje nową parę (pary) klucz-wartość
+human_character["x"] = 2.1
+
+human_character.update({"y": 5})
+human_character.update({"velocity": 3.5, "experience": 0})
+
+print(human_character)
+```
+{'class': 'Human', 'x': 2.1, 'y': 5, 'velocity': 3.5, 'experience': 0}
+
+```python
+# pozwala również nadpisać istniejące pary klucz-wartość
+human_character["x"] = 100
+
+human_character.update({"velocity": 10.1, "experience": 1})
+
+print(human_character)
+```
+{'class': 'Human', 'x': 100, 'y': 5, 'velocity': 10.1, 'experience': 1}
+
+**`get`**
+```python
+# wyciąga wartość, która znajduje się pod danym kluczem
+human_character["class"]  # 'Human'
+
+human_character.get("power")  # None
+human_character.get("power", 0)  # 0
+```
+
+**`pop`**
+```python
+human_character.pop("x")  # usuwa podany klucz wraz z wartością pod nim
+```
+100
+```python
+print(human_character)  # ze słownika został usunięty klucz 'x'
+```
+{'class': 'Human', 'y': 5, 'velocity': 3.5, 'experience': 0}
+
+```python
+human_character.popitem()  # usuwa ostatnio dodaną parę klucz-wartość
+```
+('experience', 1)
+
+```python
+print(human_character)
+```
+{'class': 'Human', 'y': 5, 'velocity': 10.1}
+
+**`fromkeys()`**
+```python
+dict().fromkeys(["class", "x", "y", "velocity", "experience", "power"])
+```
+{'class': None, 'x': None, 'y': None, 'velocity': None, 'experience': None, 'power': None}
+
 
 #### 3.5.4 `set`
+```python
+allowed_classes = {"human", "zombie"}
+```
+
+**`add`**
+```python
+allowed_classes.add("werewolf")
+print(allowed_classes)
+```
+{'human', 'werewolf', 'zombie'}
+
+**`pop`**
+```python
+allowed_classes.pop()
+```
+'zombie'
+
+```python
+print(allowed_classes)
+```
+{'human', 'werewolf'}
+
+**`remove`**
+```python
+allowed_classes.remove("human")
+print(allowed_classes)
+```
+{'werewolf'}
+
+
 ---
 ---
 ---
